# fedimui-rs

./: .gitignore  Cargo.toml  Makefile  build.rs  go.mod  go.sum  goppgen.go  main.go  main_android.go  main_flags_android.go  main_flags_android_arm64.go  main_flags_macos.go  main_test.go  misc.txt
app/: android_flags.go  buildandroid.sh  go.mod
appgo/: go.sum  main.go
src/: democode.rs  lib.rs  main.rs.bak
ui/: appwindow.slint  democode.slint
