# [lib]
# name         = "myproject"
# crate-type   = ["rlib", "cdylib"]

[lib]
# crate-type = ["cdylib", "staticlib"]
crate-type = ["cdylib"]

[package]
# crate-type = ["rlib", "cdylib"]
# crate-type =  ["cdylib"]
name = "fedimuirs"
version = "0.1.0"
authors = ["envsh <yatsen21@outlook.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# slint = "1.6"
slint = { version = "1.6", features = ["backend-android-activity-06"] }
libc = "0.2.85"
serde_json = "1.0"

[build-dependencies]
slint-build = "1.6"


# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

